Update main.css with responsive fonts and media query to fix width on mobile devices.

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,3 +1,8 @@
+@media only screen and (max-width: 500px) {
+    .maxWidth {
+        width: 100%;
+    }
+}
 a {
   color: teal;
   text-decoration: none;
@@ -6,7 +11,7 @@ a:hover {
   text-decoration: underline;
 }
 p, a  {
-  font-size: 18px;
+  font-size: 1.125rem;
 }
 .center {
   text-align: center;
